--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest src --transform ts-jest",
+    "test": "npx jest --transform ts-jest",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
     "dev": "nodemon"
